<resources>
    <string name="app_name">Vegetables</string>
    <string name="connect_error">连接异常</string>
    <string name="connect_timeout">连接超时</string>
    <string name="bad_network">网络问题</string>
    <string name="parse_error">解析异常</string>
    <string name="unknown_error">未知错误</string>
    <string name="title_home">首页</string>
    <string name="title_cart">购物车</string>
    <string name="title_me">我的</string>


    <string name="status_layout_manager_loading">加载中...</string>
    <string name="status_layout_manager_empty">还没有内容</string>
    <string name="status_layout_manager_error">连接后请点击刷新</string>
    <string name="status_layout_manager_retry">重新加载</string>
    <string name="search_hint">搜索</string>
    <string name="network_break">网络已断开</string>
    <string name="total_sum">合计:</string>
    <string name="init_total_money">¥ 0.00</string>
    <string name="init_commit">结算</string>
    <string name="tv_delete">删除</string>
    <string name="cb_all">全部</string>
    <string name="tv_editor">编辑</string>
    <string name="init_car_title">购物车</string>
    <string name="et_search_empty">搜索内容不能为空</string>
    <string name="pay_table" translatable="false">收银台</string>
    <string name="new_address" translatable="false">新增地址</string>
    <string name="order_send_function">配送</string>
    <string name="leave_message">留言</string>
    <string name="leave_message_notice">建议留言前先与商家沟通确认</string>
</resources>
