<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp_10"
    android:layout_marginStart="@dimen/dp_10"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10"
    android:paddingStart="@dimen/dp_10">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        tools:ignore="ContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/common_black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="我就是一个标题,是一个很长很长的标题,唯一的目的就是溢出去,还要长一点,看到效果了"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color_navigation"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="$99"/>

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="@id/tv_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_price"
        tools:text="x2"/>

    <Space
        android:id="@+id/product_space_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"/>

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_horiz_black"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_logistics"
        app:layout_constraintBottom_toBottomOf="@id/tv_logistics_info"/>

    <TextView
        android:id="@+id/tv_logistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_5"
        android:textColor="@color/color_37"
        android:textSize="@dimen/sp_14"
        tools:text="快递运输"
        app:layout_constraintTop_toBottomOf="@id/product_space_one"
        app:layout_constraintEnd_toStartOf="@id/iv_more"/>

    <TextView
        android:id="@+id/tv_logistics_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_37"
        android:textSize="@dimen/sp_14"
        tools:text="工作日,双休日与节假日皆可送货"
        app:layout_constraintTop_toBottomOf="@id/tv_logistics"
        app:layout_constraintEnd_toEndOf="@id/tv_logistics"/>

    <TextView
        android:id="@+id/tv_order_send"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/order_send_function"
        android:textColor="@color/color_37"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toTopOf="@id/tv_logistics"
        app:layout_constraintBottom_toBottomOf="@id/tv_logistics_info"/>

    <Space
        android:id="@+id/product_space_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/tv_order_send"/>

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_message"
        android:textColor="@color/color_37"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_space_two"/>

    <EditText
        android:id="@+id/et_words"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:background="@null"
        android:inputType="text"
        android:hint="@string/leave_message_notice"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_comment"
        app:layout_constraintTop_toTopOf="@+id/tv_comment"/>

</android.support.constraint.ConstraintLayout>